# tstp2agda

./: .gitignore  .travis.yml  .travis.yml.backup  LICENSE  Makefile  README.md  cnf_0.tptp  cnf_1.tptp  cnf_3.tptp  cnf_4.tptp  makefile  run-tests.sh  saturation.tptp  tstp2agda.agda-lib  tstp2agda.cabal
examples/problem/: Basic-2.tptp  Basic-3.tptp  Basic-4.tptp  Basic-5.tptp  Basic-6.tptp  Basic-7.tptp  contradiction.tptp  id.tptp  id2.tptp  proof.dot  skolmeEquiv.tptp  test.tptp  trivial.tptp
examples/proof/: Basic-1.tstp  Basic-2.tstp  Basic-3.tstp  Basic-4.tstp  Basic-5.tstp  Basic-6.tstp  Basic-7.tstp  Proof1.agda  clean_proof.tptp  online-proof.tptp  proof.small  test_proof.tptp
notes/: Deep.agda  equality.agda  ex-andreas.agda  notes.agda
problems/: prop-000.tptp  prop-001.tptp  prop-003.tptp  prop-005.tptp  prop-006.tptp  prop-007.tptp  prop-008.tptp  prop-009.tptp  prop-024.tptp  prop-025.tptp  prop-027.tptp  prop-033.tptp  prop-034.tptp
src/: .#PP.agda  Args.hs  Main.agda  Main.hs  Options.hs  PP.agda  Proof.agda  T2A.hs  TSTP.hs  Util.hs
src/Data/: Proof.hs  TSTP.hs
src/Data/FOL/: #Deep.agda#  Base.agda  Deep.agda  Shallow.agda
src/Data/FOL/Deep/: #Theorems.agda#  Semantics.agda  Syntax.agda  Theorems.agda
src/Data/FOL/Deep/ATP/: Metis.agda
src/Data/Proof/: ProofTreeGen.hs
src/Data/TSTP/: AtomicWord.hs  BinOp.hs  F.hs  Formula.hs  GData.hs  InfixPred.hs  IntroType.hs  Parent.hs  Quant.hs  Role.hs  Rule.hs  Source.hs  Status.hs  Term.hs  Theory.hs  V.hs
src/Examples/: Basic-1.tstp  Basic-3.tstp  Basic-6.tstp  Basic-7.tstp  Basic-deep.agda
src/Proof/: Basic-1.agda  Basic-2.agda
src/T2A/: Core.hs  Tactics.hs
src/T2A/Tactics/: Metis.hs
src/TSTP/: Base.hs  Lexer.hs  Lexer.x  Parser.agda  Parser.hs  Parser.y
src/Test/: Function.hs  Main.hs  Proof.hs
src/Utils/: Functions.hs  Monad.hs  PrettyPrint.hs  Version.hs
test/: Proof.hs  basic.test
test/Proof/: Basic-1.agda
test/Test/: Main.hs
test/deep/: Main.hs  basic.test  check-prop-000.test  check-prop-001.test  check-prop-016.test  check-prop-017.test  check-prop-041.test  check-prop-044.test  prop-000.test  prop-001.test  prop.agda
test/libraries/: prop.tptp
test/metis/: simplify.txt  strip.tptp
test/problems/: cnf_0.tptp  problems.tex  prop-000.agda  prop-000.tstp  prop-000.tstpa  prop-001.agda  prop-001.tptp  prop-001.tstp  prop-001.tstpa  prop-002.agda  prop-002.tptp  prop-002.tstp  prop-002.tstpa  prop-003.agda  prop-003.tptp  prop-003.tstp  prop-003.tstpa  prop-004.agda  prop-004.tptp  prop-004.tstp  prop-004.tstpa  prop-005.agda  prop-005.tptp  prop-005.tstp  prop-005.tstpa  prop-006.agda  prop-006.tptp  prop-006.tstp  prop-006.tstpa  prop-007.agda  prop-007.tptp  prop-007.tstp  prop-007.tstpa  prop-008.agda  prop-008.tptp  prop-008.tstp  prop-008.tstpa  prop-009.agda  prop-009.tptp  prop-009.tstp  (+199 more)
test/shallow/: run-tests.sh
test/shallow/Test/: Function.hs
