name:          tstp2agda
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.8
author:        Alejandro Gómez-Londoño with contributions by Jonathan Prieto-Cubides
license:       MIT
license-file:  LICENSE
maintainer:    Jonathan Prieto-Cubides <jprieto9@eafit.edu.co>
category:      Language
homepage:      https://github.com/agomezl/tstp2agda
bug-reports:   https://github.com/agomezl/tstp2agda/issues/
synopsis:      Proof-term reconstruction from TSTP to Agda
tested-with:   GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
description:
  A haskell program for translating <http://www.cs.miami.edu/~tptp/TSTP/ TSTP>
  proofs into <http://wiki.portal.chalmers.se/agda/pmwiki.php Agda> code.
  A library is available as well.
extra-source-files:
  README.md

source-repository head
  type:     git
  location: git://github.com/agomezl/tstp2agda.git

executable tstp2agda
  main-is:        Main.hs
  hs-source-dirs: src
  include-dirs:   src/Data
                  src/Proof
                  src/T2A
                  src/Test
                  src/TSTP

  build-depends:  array >= 0.4 && < 1.0
                  , base >= 4.6.0.1 && < 4.10
                  , bytestring >= 0.10.0.2 && < 0.11
                  , containers >= 0.5.0.0 && < 0.6
                  , mtl >= 2.2.1 && < 2.3
                  , pretty >= 1.1.1.0 && < 1.1.1.2 || >= 1.1.2 && < 1.2
                  , text >= 0.11.3.1 && < 1.3

  build-tools: cpphs >= 1.19

  other-modules:
    Data.Proof
    Data.Proof.ProofTreeGen
    Data.TSTP
    Data.TSTP.AtomicWord
    Data.TSTP.BinOp
    Data.TSTP.F
    Data.TSTP.Formula
    Data.TSTP.GData
    Data.TSTP.InfixPred
    Data.TSTP.IntroType
    Data.TSTP.Parent
    Data.TSTP.Quant
    Data.TSTP.Role
    Data.TSTP.Rule
    Data.TSTP.Source
    Data.TSTP.Status
    Data.TSTP.Term
    Data.TSTP.Theory
    Data.TSTP.V
    Options
    Paths_tstp2agda
    T2A
    T2A.Core
    T2A.Tactics
    TSTP
    TSTP.Base
    TSTP.Lexer
    TSTP.Parser
    Utils.Functions
    Utils.Monad
    Utils.PrettyPrint
    Utils.Version

library
  hs-source-dirs: src
  build-depends:  array >= 0.4 && < 1.0
                  , base >= 4.6.0.1 && < 4.10
                  , bytestring >= 0.10.0.2 && < 0.11
                  , containers >= 0.5.0.0 && < 0.6
                  , mtl >= 2.2.1 && < 2.3
                  , pretty >= 1.1.1.0 && < 1.1.1.2 || >= 1.1.2 && < 1.2
                  , text >= 0.11.3.1 && < 1.3
  other-modules:
    Data.Proof
    Data.Proof.ProofTreeGen
    Data.TSTP
    Data.TSTP.AtomicWord
    Data.TSTP.BinOp
    Data.TSTP.F
    Data.TSTP.Formula
    Data.TSTP.GData
    Data.TSTP.InfixPred
    Data.TSTP.IntroType
    Data.TSTP.Parent
    Data.TSTP.Quant
    Data.TSTP.Role
    Data.TSTP.Rule
    Data.TSTP.Source
    Data.TSTP.Status
    Data.TSTP.Term
    Data.TSTP.Theory
    Data.TSTP.V
    Options
    Paths_tstp2agda
    T2A
    T2A.Core
    T2A.Tactics
    TSTP
    TSTP.Base
    TSTP.Lexer
    TSTP.Parser
    Utils.Functions
    Utils.Monad
    Utils.PrettyPrint
    Utils.Version

test-suite tstp2agda-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:    array >= 0.5 && < 1.0
                  , base >= 4.6.0.1 && < 4.10
                  , bytestring >= 0.10.0.2 && < 0.11
                  , containers >= 0.5.0.0 && < 0.6
                  , mtl >= 2.2.1 && < 2.3
