name:          tstp2agda
version:       0.1.1.0
build-type:    Simple
cabal-version: >= 1.8
author:        Alejandro G칩mez-Londo침o with contributions by Jonathan Prieto-Cubides
license:       MIT
license-file:  LICENSE
maintainer:    Alejandro G칩mez-Londo침o
category:      Language
homepage:      https://github.com/agomezl/tstp2agda
bug-reports:   https://github.com/agomezl/tstp2agda/issues/
synopsis:      Proof-term reconstruction from TSTP to Agda
tested-with:   GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
description:
  A haskell program for translating <http://www.cs.miami.edu/~tptp/TSTP/ TSTP>
  proofs into <http://wiki.portal.chalmers.se/agda/pmwiki.php Agda> code.
  A library is available as well.
extra-source-files:
  README.md

source-repository head
  type:     git
  location: git://github.com/agomezl/tstp2agda.git

executable tstp2agda
  main-is:        Main.hs
  hs-source-dirs: src
  include-dirs:   src/Data
                  src/T2A
                  src/TSTP
                  src/Utils

  build-depends:  array >= 0.4 && < 1.0
                , base >= 4.6.0.1 && < 4.10
                , bytestring >= 0.10.0.2 && < 0.11
                , containers >= 0.5.0.0 && < 0.6
                , mtl >= 2.2.1 && < 2.3
                , pretty >= 1.1.1.0 && < 1.1.1.2 || >= 1.1.2 && < 1.2
                , text >= 0.11.3.1 && < 1.3

  build-tools: cpphs >= 1.19

  other-modules:
    Data.Proof
    Data.Proof.ProofTreeGen
    Data.TSTP
    Data.TSTP.AtomicWord
    Data.TSTP.BinOp
    Data.TSTP.F
    Data.TSTP.Formula
    Data.TSTP.GData
    Data.TSTP.InfixPred
    Data.TSTP.IntroType
    Data.TSTP.Parent
    Data.TSTP.Quant
    Data.TSTP.Role
    Data.TSTP.Rule
    Data.TSTP.Source
    Data.TSTP.Status
    Data.TSTP.Term
    Data.TSTP.Theory
    Data.TSTP.V
    Options
    Paths_tstp2agda
    T2A
    T2A.Core
    T2A.Tactics
    TSTP
    TSTP.Base
    TSTP.Lexer
    TSTP.Parser
    Utils.Functions
    Utils.Monad
    Utils.PrettyPrint
    Utils.Version

  ghc-options: -w
               -- Using cpphs as the C preprocessor.
               -pgmP cpphs -optP --cpp

  if impl(ghc >= 7.6)
     ghc-options: -fwarn-alternative-layout-rule-transitional
                  -- The above option isn't documented in GHC 7.10.1.
                  -fwarn-deprecated-flags
                  -fwarn-dodgy-exports
                  -fwarn-dodgy-foreign-imports
                  -fwarn-dodgy-imports
                  -fwarn-duplicate-exports
                  -fwarn-hi-shadowing
                  -fwarn-identities
                  -fwarn-incomplete-patterns
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -fwarn-missing-fields
                  -- 18 July 2014. We cannot enable this option
                  -- because we are using the Paths_apia module.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-methods
                  -fwarn-missing-signatures
                  -fwarn-monomorphism-restriction
                  -fwarn-name-shadowing
                  -fwarn-orphans
                  -fwarn-overlapping-patterns
                  -fwarn-tabs
                  -fwarn-type-defaults
                  -fwarn-unrecognised-pragmas
                  -fwarn-unused-binds
                  -fwarn-unused-do-bind
                  -fwarn-unused-imports
                  -fwarn-unused-matches
                  -fwarn-unsupported-calling-conventions
                  -fwarn-warnings-deprecations
                  -fwarn-wrong-do-bind

  if impl(ghc >= 7.8)
     ghc-options: -fwarn-empty-enumerations
                  -fwarn-inline-rule-shadowing
                  -fwarn-overflowed-literals
                  -fwarn-typed-holes
                  -fwarn-unsupported-llvm-version

  -- The following option generates warnings with GHC 7.10.1.
  if impl(ghc < 7.10)
     ghc-options: -fwarn-auto-orphans

  if impl(ghc >= 7.10)
     ghc-options: -fwarn-deriving-typeable
                  -fwarn-unticked-promoted-constructors

  -- This option will be deprected in GHC 8.0.1.
  if impl(ghc >= 7.8) && impl(ghc < 8.0)
    ghc-options: -fwarn-duplicate-constraints

  -- This option will be deprected in GHC 8.0.1.
  if impl(ghc >= 7.10) && impl(ghc < 8.0)
    ghc-options: -fwarn-context-quantification

  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-monadfail-instances
                 -Wmissing-pattern-synonym-signatures
                 -Wnoncanonical-monad-instances
                 -Wnoncanonical-monoid-instances
                 -Wredundant-constraints
                 -Wsemigroup
                 -Wunrecognised-warning-flags
                 -Wunused-foralls


library
  hs-source-dirs: src
  build-depends:  array >= 0.4 && < 1.0
                , base >= 4.6.0.1 && < 4.10
                , bytestring >= 0.10.0.2 && < 0.11
                , containers >= 0.5.0.0 && < 0.6
                , mtl >= 2.2.1 && < 2.3
                , pretty >= 1.1.1.0 && < 1.1.1.2 || >= 1.1.2 && < 1.2
                , text >= 0.11.3.1 && < 1.3
  other-modules:
    Data.Proof
    Data.Proof.ProofTreeGen
    Data.TSTP
    Data.TSTP.AtomicWord
    Data.TSTP.BinOp
    Data.TSTP.F
    Data.TSTP.Formula
    Data.TSTP.GData
    Data.TSTP.InfixPred
    Data.TSTP.IntroType
    Data.TSTP.Parent
    Data.TSTP.Quant
    Data.TSTP.Role
    Data.TSTP.Rule
    Data.TSTP.Source
    Data.TSTP.Status
    Data.TSTP.Term
    Data.TSTP.Theory
    Data.TSTP.V
    Options
    Paths_tstp2agda
    T2A
    T2A.Core
    T2A.Tactics
    TSTP
    TSTP.Base
    TSTP.Lexer
    TSTP.Parser
    Utils.Functions
    Utils.Monad
    Utils.PrettyPrint
    Utils.Version

test-suite tstp2agda-test
  type:             exitcode-stdio-1.0
  main-is:          Test/Main.hs
  hs-source-dirs:   test
  build-depends:    array >= 0.4 && < 1.0
                  , base >= 4.6.0.1 && < 4.10
                  , bytestring >= 0.10.0.2 && < 0.11
                  , containers >= 0.5.0.0 && < 0.6
                  , mtl >= 2.2.1 && < 2.3
